# CTrieTree

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lxzh123/ctrietree/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bstree.cpp  bstree.h  glance.cpp  glance.h  trietree.cpp  trietree.h
app/src/main/cpp/utils/: common.cpp  common.h  gtlog.cpp  gtlog.h
app/src/main/java/com/lxzh123/ctrietree/: BSTree.java  CTrieTree.java  MainActivity.java  Native.java  ResultBuilder.java  ResultItem.java  SearchTrieTree.java  TrieNodeData.java  TrieTree.java
app/src/main/java/com/lxzh123/ctrietree/base/: BSTNode.java  BSTree.java  IContainer.java  TrieNode.java  TrieTree.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lxzh123/ctrietree/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
